# llm-arcade

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: blackjack.py  cliff_walking.py  frozen_lake.py  index.py  taxi.py
app/db/: database.py  models.py
app/services/: llm_agent.py  openrouter_client.py
templates/: base.html  blackjack.html  cliff_walking.html  frozen_lake.html  index.html  taxi.html
templates/ui/: game_controls.html  game_log.html  game_stats.html  llm_reasoning.html  styles.html
